--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Me</title>
-    <link href="./main.css" rel="stylesheet"/>
+    <link href="./main.css" rel="stylesheet">
 
 </head>
 <body>
@@ -32,7 +32,7 @@
         My Moods
     </h2>
     <div>
-        <span>Happy: </span><img src="./happy.jpeg" alt="Happy"/><span> Boring: </span><img src="./boring.jpg" alt="Boring" height="200"/>
+        <span>Happy: </span><img src="./happy.jpeg" alt="Happy"><span> Boring: </span><img src="./boring.jpg" alt="Boring" height="200">
     </div>
 
     <h2 class="header">My Hobbies</h2>
@@ -42,11 +42,11 @@
     </ul>
 
     <div>
-        <a href="#">
-           <img src="./css_checker.png" alt="css checker" height="80"/> 
+        <a href="https://jigsaw.w3.org/css-validator/validator?uri=https%3A%2F%2Fgamhpang.github.io%2FWAP_Lab02%2F&profile=css3svg&usermedium=all&warning=1&vextwarning=&lang=en">
+           <img src="./css_checker.png" alt="css checker" height="80"> 
         </a>
-        <a href="#">
-            <img src="./htmlchecker.png" alt="html checker" height="80"/>
+        <a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fgamhpang.github.io%2FWAP_Lab02%2F">
+            <img src="./htmlchecker.png" alt="html checker" height="80">
         </a>
             
     </div>
